--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,7 @@
 .App-Header-Row{
-    display:flex;
+    display: flex;
     justify-content: space-between;
-    background-color: rgb(253, 168, 71);
-    padding:5px;
+    background-color: lightblue;
+    padding: 5px;
+    font-size: 20px;
 }
